@@ -1,5 +1,7 @@
 Changelog for Percona Toolkit
 
+ * Fixed bug   PT-1857: pt-heartbeat cannot reconnect. 
+
  * Fixed bug   PT-169 : pt-online-schema-change FKs error handling.
  * Fixed bug   PT-1892: pt-summary says sshd not running
  * Fixed bug   PT-1881: pt-upgrade fails when query including format strings and SQL errors is given (Thanks Nayuta Yanagisawa)
